test/src/e2e_vm_tests/test_programs/should_fail/const_generics/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/const_generics --experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/const_generics
   Compiling library std (sway-lib-std)
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:4:63
  |
2 | script;
3 | 
4 | struct RepeatedConstGenericsNameInStructs<const N: u64, const N: u64> { }
  |                                                               ^ Constant "N" was already defined in scope.
5 | 
6 | impl<const N: u64, const N: u64> RepeatedConstGenericsNameInStructs<N, N> {
  |
____

error
 --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:6:26
  |
4 | struct RepeatedConstGenericsNameInStructs<const N: u64, const N: u64> { }
5 | 
6 | impl<const N: u64, const N: u64> RepeatedConstGenericsNameInStructs<N, N> {
  |                          ^ Constant "N" was already defined in scope.
7 |     fn repeated_const_generics_name<const N: u64, const A: u64, const A: u64>() {
8 |     }
  |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:11:59
   |
 9 | }
10 | 
11 | enum RepeatedConstGenericsNameInEnums<const N: u64, const N: u64> { }
   |                                                           ^ Constant "N" was already defined in scope.
12 | 
13 | fn repeated_const_generics_name<const N: u64, const N: u64>() {
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:13:53
   |
11 | enum RepeatedConstGenericsNameInEnums<const N: u64, const N: u64> { }
12 | 
13 | fn repeated_const_generics_name<const N: u64, const N: u64>() {
   |                                                     ^ Constant "N" was already defined in scope.
14 | }
15 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:22:24
   |
20 | 
21 | fn main() {
22 |     let _: CrazyStruct<UNKNOWN> = CrazyStruct { };
   |                        ^^^^^^^ Could not find symbol "UNKNOWN" in this scope.
23 |     let _: CrazyEnum<UNKNOWN> = CrazyEnum::A;
24 |     let _: [u8; UNKNOWN] = [1u8];
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:23:22
   |
21 | fn main() {
22 |     let _: CrazyStruct<UNKNOWN> = CrazyStruct { };
23 |     let _: CrazyEnum<UNKNOWN> = CrazyEnum::A;
   |                      ^^^^^^^ Could not find symbol "UNKNOWN" in this scope.
24 |     let _: [u8; UNKNOWN] = [1u8];
25 |     let _: str[UNKNOWN] = __to_str_array("abc");
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:24:17
   |
22 |     let _: CrazyStruct<UNKNOWN> = CrazyStruct { };
23 |     let _: CrazyEnum<UNKNOWN> = CrazyEnum::A;
24 |     let _: [u8; UNKNOWN] = [1u8];
   |                 ^^^^^^^ Could not find symbol "UNKNOWN" in this scope.
25 |     let _: str[UNKNOWN] = __to_str_array("abc");
26 | }
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/const_generics/src/main.sw:25:16
   |
23 |     let _: CrazyEnum<UNKNOWN> = CrazyEnum::A;
24 |     let _: [u8; UNKNOWN] = [1u8];
25 |     let _: str[UNKNOWN] = __to_str_array("abc");
   |                ^^^^^^^ Could not find symbol "UNKNOWN" in this scope.
26 | }
   |
____

  Aborting due to 8 errors.
error: Failed to compile const_generics
